--- a/compose.yml
+++ b/compose.yml
@@ -7,4 +7,12 @@ services:
       - "8080:8080"
     volumes:
       - ".:/app"
+  tunnel:
+    container_name: cloudflared-tunnel
+    image: cloudflare/cloudflared
+    restart: unless-stopped
+    command: tunnel run
+    environment:
+      - TUNNEL_TOKEN=${TUNNEL_TOKEN}
+
 
